# Security

./: .gitignore  Kali_Linux_Security_and_Maintenance.sh  LICENSE  README.md  README_AEGIS.md  Readme.md  instructions.md  kali_security_maintenance.sh  main.py  security.py
Aegis/: ARCHITECTURE.md  config.yaml  main_cli.py  requirements.txt
Aegis/src/core/: metrics.py  system_interface.py
Aegis/src/ui/: components.py  dashboard.py
Security/: DEVELOPMENT.md  INSTALLATION.md  config.yaml  requirements.txt  security_dashboard.py  system_detector.py  test_logic.py
aegis_gui/: index.html  package.json  tailwind.config.js
aegis_gui/src/: App.jsx  index.css
aegis_gui/src-tauri/: Cargo.toml  tauri.conf.json
aegis_gui/src-tauri/src/: main.rs
aegis_gui/src/components/: Dashboard.jsx  StatusCard.jsx
aegis_rs/: Cargo.toml
aegis_rs/src/: main.rs
aegis_rs/src/core/: traits.rs  types.rs
aegis_rs/src/monitor/: mod.rs  telemetry.rs
aegis_rs/src/system/: linux.rs  mock.rs  mod.rs
aegis_rs/src/ui/: mod.rs  theme.rs
aegis_rs/src/ui/components/: metric_card.rs  mod.rs
nexus_tui/: Cargo.toml
nexus_tui/src/: main.rs
nexus_tui/src/core/: system.rs
nexus_tui/src/ui/: dashboard.rs  mod.rs  operations.rs
